# pure-ioc

./: .gitignore  CMakeLists.txt  README.md  build-with-tests.sh  build.sh
cmake/: GTest.cmake
src/: container-manager.cpp  container-manager.h  default-logger.cpp  default-logger.h  default-services.cpp  default-services.h  enable-logger-interface.cpp  enable-logger-interface.h  locator-mutable.cpp  locator-mutable.h  locator.cpp  locator.h  logger-interface.h  services-interface.h
src/internal/: default-logger.cpp  default-logger.h  default-services.cpp  default-services.h
tests/: CMakeLists.txt  container-manager-tests.cpp  default-logger-tests.cpp  default-services-tests.cpp  locator-log-tests.cpp  locator-mutable-tests.cpp  locator-tests.cpp
